--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-# MySQL config
-spring.datasource.url=jdbc:mysql://localhost:3306/wimbledon_db
-spring.datasource.username=root
-spring.datasource.password=root
+# Port configuration for Railway
+server.port=${PORT:8080}
 
+# Database config (Railway will provide these environment variables)
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/wimbledon_db}
+spring.datasource.username=${DATABASE_USERNAME:root}
+spring.datasource.password=${DATABASE_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate
