--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 server.port=${PORT:8080}
 
 # Database config (Railway will provide these environment variables)
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/wimbledon_db}
-spring.datasource.username=${DATABASE_USERNAME:root}
-spring.datasource.password=${DATABASE_PASSWORD:root}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate
