--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-# Port configuration for Railway
+# Port configuration
 server.port=${PORT:8080}
 
-# Database config (Railway will provide these environment variables)
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Database config with H2 fallback
+spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:testdb}
+spring.datasource.username=${DATABASE_USERNAME:sa}
+spring.datasource.password=${DATABASE_PASSWORD:}
+spring.datasource.driver-class-name=${DATABASE_DRIVER:org.h2.Driver}
 
-# Hibernate
+# Hibernate config that works with both PostgreSQL and H2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.H2Dialect}
 
-# Disable H2 console
-spring.h2.console.enabled=false
+# H2 console (only active when using H2)
+spring.h2.console.enabled=true
